# pycharm_pytest_output_bug

./: hello.py  pyproject.toml
tests/: test_order.py
