[project]
name = "pycharm-pytest-output-bug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-random-order>=1.1.1",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --random-order --durations=20"
log_cli = true
log_cli_level = "DEBUG"